service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oc-backend
spec:
  ports:
    - port: 80
      name: http
      targetPort: http
  type: LoadBalancer
