ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oc-backend
spec:
  rules:
    - host: oc-backend.com
      http:
        paths:
          - backend:
              service:
                name: oc-backend
                port:
                  name: http
            path: /
            pathType: Prefix
